--- a/style.css
+++ b/style.css
@@ -6,8 +6,22 @@
 
 #productos {
     display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    margin-bottom: 2%;
 }
 
 h1,h2,h3,h4,h5 {
     text-align: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
+
+p {
+    text-align: center;
+}
+
+img {
+    height: 200px;
+}
+
